adharsource/k8s/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-pod1
        image: nginx:1.14.2
        ports:
        - containerPort: 80
