adharsource/k8s/pod-logs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-producer-1
  namespace: default
  labels:
    app: log-producer
spec:
  containers:
  - name: main
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: log-producer-2
  namespace: default
  labels:
    app: log-producer
spec:
  containers:
  - name: main
    image: nginx
