adharsource/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: adharpod2
  namespace: default
spec:
  containers:
    - name: adharpod2
      image: "nginx:latest"
      volumeMounts:
        - name: adhar-storage
          mountPath: /usr/share/nginx/html
  volumes:
    - name: adhar-storage
      persistentVolumeClaim:
        claimName: adharpod2-pvc
