adharsource/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/path1"
        backend:
          service:
            name: service-app1
            port:
              number: 80

      - pathType: Prefix
        path: "/path2"
        backend:
          service:
            name: service2
            port:
              number: 80
